--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 language: python
 python: "2.7"
 
+notifications:
+  email: false
+
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y curl
